propfuzz/tests/compile-fail/no-description.stderr
error: #[propfuzz] requires either a doc comment or description = "..."
 --> $DIR/no-description.rs:9:1
  |
9 | fn no_description(_: usize) {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
